--- a/erlangserver/www/plot.html
+++ b/erlangserver/www/plot.html
@@ -93,7 +93,8 @@ function loadData (ParamString){
 
 $(function () {
 	//normalerweise werden hier einfach die letzten 24 Stunden geladen. Da ber die Abtastung grad nicht laeuft halt diese Zeit. Da gibt es zumindest Daten
-	loadData ("?from=2010-01-01.17:35:00&to=2010-01-02.19:05:00");
+//	loadData ("?from=2010-01-01.17:35:00&to=2010-01-02.19:05:00");
+	loadData ("");
     $("#getDataViaJSON").click(function () {
 		ParamString = "?from=" + $("#datetimepickerfrom").val() + "&to=" + $("#datetimepickerto").val();
 		ParamString = ParamString.replace(/ /g,".");
