reduceList is working now. But still not added correctly into the request. Has to be automatically calculated based on the number of points the client can handle

--- a/erlangserver/www/test.html
+++ b/erlangserver/www/test.html
@@ -108,15 +108,15 @@ $(function () {
 	//normalerweise werden hier einfach die letzten 24 Stunden geladen. Da ber die Abtastung grad nicht laeuft halt diese Zeit. Da gibt es zumindest Daten
 //	loadData ("?from=2010-06-01.15:30:00:00&to=2010-06-01.17:00:00");
 //	PlotRange  ="?from=2010-06-01.15:30:00&to=2010-06-01.17:00:00";
-//	PlotRange  ="?from=2011-02-10.22:00:00&to=2011-02-10.23:20:00";
+//	PlotRange  ="?from=2011-03-07.19:00:00&to=2011-03-07.20:20:00";
 //	PlotRange  ="?lasthours=1"
-//	PlotRange  ="?lasthours=1"
-    PlotRange  ="?lastminutes=5"
+	PlotRange  ="?lasthours=10"
+//    PlotRange  ="?lastminutes=5"
 //	PlotRange  =""
 	loadDataAC ();
     loadDataGas();
-    simulateGasMeter();
-    simulateACMeter();
+//    simulateGasMeter();
+//    simulateACMeter();
 });
 </script>
  </body></html>
